    (Zheng Shao via namit)

    HIVE-603. list of maps and vice versa
    (Zheng Shao via namit)

    HIVE-553. add BinarySortableSerDe
    (Zheng Shao via namit)

    HIVE-622. add UDF reverse
    (Emil Ibrishimov via namit)

    HIVE-438. Make Hive work with apache thrift
    (Raghu Murthy via namit)

    HIVE-522. Extend GenericUDAF to support complex types
    (Zheng Shao via namit)

  IMPROVEMENTS
    HIVE-389. Option to build without ivy (jssarma)

    HIVE-360. Generalize the FileFormat Interface in Hive.
    (He Yongqiang via zshao)

    HIVE-406. Build file improvements. (Joydeep Sen Sarma via zshao).

    HIVE-254. Link jobtracker from Hive History in Hive Web Interface.
    (Edward Capriolo via athusoo)

    HIVE-502. Optimize RCFile's performance by removeing all synchronized
    modifiers. (Yongqiang He via zshao)

    HIVE-204. Provide option to run tests with MiniMRCluster.
    (Namit Jain via athusoo)

    HIVE-511. Make DoubleWritable's hashCode more uniform.
    (Zheng Shao via rmurthy)

    HIVE-490. Add missing configuration variables to hive-default.xml.
    (Yongqiang He via zshao)

    HIVE-528. Map Join followup: split MapJoinObject into MapJoinObjectKey and
    MapJoinObjectValue. (Namit Jain via zshao)

    HIVE-542. UDF: Faster String Like. (Yuntao Jia via zshao)

    HIVE-521. Move size, if, isnull, isnotnull to GenericUDF.
    (Min Zhou via zshao)

    HIVE-439. Merge small files after a map-only job. (Namit Jain via zshao)

    HIVE-516. Enable predicate pushdown for junit tests.
    (Prasad Chakka via zshao)

    HIVE-530. Map Join followup: optimize number of map-reduce jobs.
    (Namit Jain via zshao)

    HIVE-445. Upgrade JPOX to datanuclues plugins. (Prasad Chakka via zshao)

    HIVE-593. UDF and GenericUDF clean-up. (Zheng Shao via pchakka)

    HIVE-605. Change eclipse classpath for datanuclues.
    (Prasad Chakka via zshao)

    HIVE-461. Optimize RCFile reading by using column pruning results.
    (Yongqiang He via zshao)
