@@ -20,6 +20,7 @@ package org.apache.hadoop.hive.ql.udf.generic;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
+import java.nio.ByteBuffer;
 import java.util.HashMap;
 
 import org.apache.commons.logging.Log;
@@ -38,6 +39,7 @@ import org.apache.hadoop.hive.serde2.objectinspector.primitive.VoidObjectInspect
 import org.apache.hadoop.hive.serde2.objectinspector.primitive.PrimitiveObjectInspectorConverter;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfo;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoUtils;
+import org.apache.hadoop.io.Text;
 
 /**
  * Util functions for GenericUDF classes.
@@ -223,5 +225,58 @@ public class GenericUDFUtils {
       }
     }
   };
-  
+
+  /**
+   * Return an ordinal from an integer.
+   */
+  public static String getOrdinal(int i) {
+    int unit = i % 10;
+    return (i <= 0) ?  ""
+        : (i != 11 && unit == 1) ?  i + "st"
+        : (i != 12 && unit == 2) ?  i + "nd"
+        : (i != 13 && unit == 3) ?  i + "rd"
+        : i + "th";
+  } 
+
+  /**
+   * Finds any occurence of <code>subtext</code> from <code>text</code> in the backing
+   * buffer, for avoiding string encoding and decoding. 
+   * Shamelessly copy from {@link org.apache.hadoop.io.Text#find(String, int)}. 
+   */
+  public static int findText(Text text, Text subtext, int start) {
+    // src.position(start) can't accept negative numbers.
+    if(start < 0)
+      return -1; 
+
+    ByteBuffer src = ByteBuffer.wrap(text.getBytes(),0,text.getLength());
+    ByteBuffer tgt = ByteBuffer.wrap(subtext.getBytes(),0,subtext.getLength());
+    byte b = tgt.get();
+    src.position(start);
+
+    while (src.hasRemaining()) {
+      if (b == src.get()) { // matching first byte
+        src.mark(); // save position in loop
+        tgt.mark(); // save position in target
+        boolean found = true;
+        int pos = src.position()-1;
+        while (tgt.hasRemaining()) {
+          if (!src.hasRemaining()) { // src expired first
+            tgt.reset();
+            src.reset();
+            found = false;
+            break;
+          }
+          if (!(tgt.get() == src.get())) {
+            tgt.reset();
+            src.reset();
+            found = false;
+            break; // no match
+          }
+        }
+        if (found) return pos;
+      }
+    }
+    return -1; // not found
+  }
+
 }
