@@ -1,0 +1,1 @@
+SELECT instr('abcd') FROM src;
