@@ -1,0 +1,1 @@
+SELECT locate('a', 'b', 1, 2) FROM src;
