@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 1:7 Arguments Length Mismatch 'abcd': The function INSTR accepts exactly 2 arguments.
