@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 1:7 Arguments Length Mismatch 2: The function LOCATE accepts exactly 2 or 3 arguments.
