@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 2:22 Argument Type Mismatch lintstring: The 2nd argument of function LOCATE is expected to a primitive type, but list is found
